# vendas-cli

./: README.md  pyproject.toml  pytest.ini  requirements.txt  vendas_exemplo.csv
src/cli/: main.py  parsers.py
src/core/: csv_processor.py
src/interfaces/: reader_interface.py  report_interface.py
src/reports/: sales_report.py
src/utils/: helpers.py
tests/: test_cli.py  test_csv_processor.py  test_generate_report.py  test_helpers.py  test_main.py
